--- a/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling_MAIN.ipynb
+++ b/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling_MAIN.ipynb
@@ -28,6 +28,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b7ae52a0",
    "metadata": {},
@@ -36,7 +37,12 @@
     "\n",
     "**Problem Statement**\n",
     "\n",
-    "Information from the World Health Organization and United Nations was gather for the years 2000-2015 for 193 countries in three categories: \n",
+    "This report investigates modifiable environmental factors that may contribute to life expectancy in the hopes of finding a mathematical model. The primary questions we answer are:\n",
+    "\n",
+    "1. *Which variables are significant and important in modeling and predicting Life Expectancy?*\n",
+    "2. *What steps should be taken given limited resources?*\n",
+    "\n",
+    "Information from the World Health Organization and United Nations was gathered for the years 2000-2015 for 193 countries in three categories: \n",
     "\n",
     "1. *Communicable diseases*: Hepatitis B, Measles, Polio, Diphtheria, HIV/AIDS.\n",
     "\n",
@@ -56,17 +62,22 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "743a0c01",
    "metadata": {},
    "source": [
     "## Introduction\n",
     "\n",
-    "In 2006, The World Health Organization published a report entitled `Preventing disease through healthy environments.` \n",
-    ">[It] “confirms that approximately one-quarter of the global disease burden, and more than one-third of the burden among children, is due to modifiable environmental factors.” \n",
+    "In 2006, The World Health Organization published a report entitled `Preventing disease through healthy environments`. \n",
+    ">[It] “confirms that approximately one-quarter of the global disease burden, and more than one-third of the burden among children, is due to modifiable environmental factors.”\n",
     ">\n",
     ">[WHO-Preventing Disease Through Healthy Environments](https://www.who.int/publications/i/item/9241593822)\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "CONTINUE:\n",
     "Not all data features are complete. There are approximately 20+ countries that need more information. Many of these countries are currently in civil unrest or outright war.\n",
     "\n",
     "We hope that global resources can be spent cost-effectively. \n",
@@ -105,7 +116,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -119,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "toc": {
    "base_numbering": 1,
@@ -167,6 +178,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
