--- a/notebooks/2_Life_Expectancy_Initial_Data_Analysis.ipynb
+++ b/notebooks/2_Life_Expectancy_Initial_Data_Analysis.ipynb
@@ -12,6 +12,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3f5ac5ac",
    "metadata": {},
@@ -37,7 +38,7 @@
     "|:---------------------|:----------------|\n",
     "| **Year** |  Year  |\n",
     "| **Country** |   Country |\n",
-    "| **Status** |  Developed or Not |\n",
+    "| **Status** |  Developed(1) or Developing(0) |\n",
     "| **GDP** |  Gross Domestic Product per capita (in USD) |\n",
     "| **TotalExpen** |    Total Expenditure |\n",
     "| **PercExpen** |   Percent Expenditure |\n",
@@ -84,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Life_Expectancy_Data.csv\r\n"
+      "ls: cannot access '*.csv': No such file or directory\n"
      ]
     }
    ],
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "06115e7f",
    "metadata": {},
    "outputs": [
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4cab4dae",
    "metadata": {
     "scrolled": false
@@ -200,7 +201,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,6 +211,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4e26f58c",
    "metadata": {},
@@ -218,59 +220,25 @@
     "\n",
     "### NOTE 1: \n",
     "- The feature 'LifeExpectancy' has 10 missing values. \n",
-    "- Therefore the 10 rows that have NAN values will be deleted. Because 'LifeExpectancy' is a Dependent variable, I will delete the 10 rows with NO labels.\n",
+    " \n",
+    "- Therefore the 10 rows that have NAN values will be deleted. Because 'LifeExpectancy' is a Dependent variable, I will delete those 10 observations with NO labels rather than impute them.\n",
+    " \n",
     "- The 'LifeExpectancy' feature appear to be **Missing Completely at Random(MCAR)**. The main advantage of **MCAR** is that the analysis is unbiased. Data lost with design fault do not impact other parameters in the model. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "bf72eff3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2928 entries, 0 to 2937\n",
-      "Data columns (total 22 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   Country         2928 non-null   object \n",
-      " 1   Year            2928 non-null   int64  \n",
-      " 2   Status          2928 non-null   object \n",
-      " 3   LifeExpectancy  2928 non-null   float64\n",
-      " 4   AdultMort       2928 non-null   float64\n",
-      " 5   InfD            2928 non-null   int64  \n",
-      " 6   EtOH            2735 non-null   float64\n",
-      " 7   PercExpen       2928 non-null   float64\n",
-      " 8   HepB            2375 non-null   float64\n",
-      " 9   Measles         2928 non-null   int64  \n",
-      " 10  BMI             2896 non-null   float64\n",
-      " 11  lt5yD           2928 non-null   int64  \n",
-      " 12  Polio           2909 non-null   float64\n",
-      " 13  TotalExpen      2702 non-null   float64\n",
-      " 14  DTP             2909 non-null   float64\n",
-      " 15  HIV             2928 non-null   float64\n",
-      " 16  GDP             2485 non-null   float64\n",
-      " 17  Population      2284 non-null   float64\n",
-      " 18  Thin1_19y       2896 non-null   float64\n",
-      " 19  Thin5_9y        2896 non-null   float64\n",
-      " 20  Income          2768 non-null   float64\n",
-      " 21  Education       2768 non-null   float64\n",
-      "dtypes: float64(16), int64(4), object(2)\n",
-      "memory usage: 526.1+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.dropna(subset=['LifeExpectancy'], inplace=True) # 10 rows deleted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d0e4a1bd",
    "metadata": {},
    "outputs": [
@@ -310,7 +278,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,12 +290,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "facc5c8b",
    "metadata": {},
    "source": [
     "### NOTE 2: \n",
     "- The five features with the highest number of mising vlaues (out of 2928) are:\n",
+    "\n",
     "|  | Feature | Number Missing | % Missing |\n",
     "|--|:--------|---------------:|----------:|\n",
     "|1 | Population | 644 | 22.0% |\n",
@@ -355,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4710c8ef",
    "metadata": {},
    "outputs": [
@@ -408,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "cbd80604",
    "metadata": {},
    "outputs": [],
@@ -440,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "0190a1e6",
    "metadata": {},
    "outputs": [
@@ -477,7 +447,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "c0f4a104",
    "metadata": {},
    "outputs": [],
@@ -508,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "3052fce7",
    "metadata": {},
    "outputs": [
@@ -516,7 +486,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Clean_LE_Data_w_Means_1.csv  Life_Expectancy_Data.csv\r\n"
+      "Clean_LE_Data_w_Means_2.csv  Life_Expectancy_Data.csv\n"
      ]
     }
    ],
@@ -526,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "db4022dc",
    "metadata": {},
    "outputs": [
@@ -660,7 +630,7 @@
        "2      17.7   0.470        9.9  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +650,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -694,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
   },
   "toc": {
    "base_numbering": 1,
@@ -737,6 +707,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ee253db64471d3bc5400655757329a6a33de9a5ca06cae94740881a9d5095460"
+   }
   }
  },
  "nbformat": 4,
