--- a/notebooks/4_Life_Expectancy_Exploratory_Data_Analysis_PART2.ipynb
+++ b/notebooks/4_Life_Expectancy_Exploratory_Data_Analysis_PART2.ipynb
@@ -59,9 +59,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Clean_LE_Data_FEng_4.csv      Life_Expectancy_Data.csv\ty_test.csv\r\n",
-      "Clean_LE_Data_Post_EDA_3.csv  x_test.csv\t\ty_train.csv\r\n",
-      "Clean_LE_Data_w_Means_2.csv   x_train.csv\r\n"
+      "Clean_LE_Data_FEng_4.csv      Life_Expectancy_Data.csv\ty_test.csv\n",
+      "Clean_LE_Data_Post_EDA_3.csv  x_test.csv\t\ty_train.csv\n",
+      "Clean_LE_Data_w_Means_2.csv   x_train.csv\n"
      ]
     }
    ],
@@ -225,7 +225,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Original File \"Clean_LE_Data_FEng_4.csv\" has  2928 observations & 18 features.\n",
+      "File \"Clean_LE_Data_FEng_4.csv\" has  2928 observations & 18 features.\n",
       "\n"
      ]
     }
@@ -235,7 +235,7 @@
     "df['Status'] = pd.Categorical(df['Status'])\n",
     "df['Region'] = pd.Categorical(df['Region'])\n",
     "\n",
-    "print(f'\\nOriginal File \"{filename}\" has ', df.shape[0], 'observations &', df.shape[1], 'features.\\n')"
+    "print(f'\\nFile \"{filename}\" has ', df.shape[0], 'observations &', df.shape[1], 'features.\\n')"
    ]
   },
   {
@@ -249,7 +249,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -306,6 +306,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ee253db64471d3bc5400655757329a6a33de9a5ca06cae94740881a9d5095460"
+   }
   }
  },
  "nbformat": 4,
