--- a/notebooks/7_Life_Expectancy_Modeling.ipynb
+++ b/notebooks/7_Life_Expectancy_Modeling.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2000ce6d",
    "metadata": {},
    "outputs": [],
@@ -51,13 +51,12 @@
     "\n",
     "# Instantiating a LinearRegression Model\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import cross_val_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "05207097",
    "metadata": {},
    "outputs": [
@@ -65,9 +64,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Clean_LE_Data_FEng_4.csv      Life_Expectancy_Data.csv\ty_test.csv\r\n",
-      "Clean_LE_Data_Post_EDA_3.csv  x_test.csv\t\ty_train.csv\r\n",
-      "Clean_LE_Data_w_Means_2.csv   x_train.csv\r\n"
+      "Clean_LE_Data_FEng_4.csv      Life_Expectancy_Data.csv\ty_test.csv\n",
+      "Clean_LE_Data_Post_EDA_3.csv  x_test.csv\t\ty_train.csv\n",
+      "Clean_LE_Data_w_Means_2.csv   x_train.csv\n"
      ]
     }
    ],
@@ -86,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c059d20d",
    "metadata": {},
    "outputs": [
@@ -123,68 +122,68 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.479</td>\n",
-       "      <td>10.1</td>\n",
+       "      <td>0.782</td>\n",
+       "      <td>15.0</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>83</td>\n",
-       "      <td>263.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>28.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.476</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>0.835</td>\n",
+       "      <td>13.7</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>86</td>\n",
-       "      <td>271.0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>83.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.470</td>\n",
-       "      <td>9.9</td>\n",
+       "      <td>0.897</td>\n",
+       "      <td>16.6</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>89</td>\n",
-       "      <td>268.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>92.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.463</td>\n",
-       "      <td>9.8</td>\n",
+       "      <td>0.673</td>\n",
+       "      <td>13.6</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>93</td>\n",
-       "      <td>272.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.454</td>\n",
-       "      <td>9.5</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>97</td>\n",
-       "      <td>275.0</td>\n",
+       "      <td>0.567</td>\n",
+       "      <td>11.8</td>\n",
+       "      <td>31.9</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>693.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Income  Education  HIV   DTP  Polio  lt5yD  AdultMort\n",
-       "0   0.479       10.1  0.1  65.0    6.0     83      263.0\n",
-       "1   0.476       10.0  0.1  62.0   58.0     86      271.0\n",
-       "2   0.470        9.9  0.1  64.0   62.0     89      268.0\n",
-       "3   0.463        9.8  0.1  67.0   67.0     93      272.0\n",
-       "4   0.454        9.5  0.1  68.0   68.0     97      275.0"
+       "   Income  Education   HIV   DTP  Polio  lt5yD  AdultMort\n",
+       "0   0.782       15.0   0.1  98.0   98.0      6       28.0\n",
+       "1   0.835       13.7   0.1  96.0   95.0      0       83.0\n",
+       "2   0.897       16.6   0.1  93.0   93.0      0       92.0\n",
+       "3   0.673       13.6   0.1  97.0   97.0      4       15.0\n",
+       "4   0.567       11.8  31.9  96.0   96.0      4      693.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "5fe9beda",
    "metadata": {},
    "outputs": [
@@ -268,7 +267,7 @@
        "4            46.4"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,85 +282,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d62a101d",
+   "execution_count": 42,
+   "id": "ed94eae8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Instantiating a LinearRegression Model\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.model_selection import cross_val_score\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "0e053c9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = LinearRegression()\n",
+    "# Load training and testing datasets\n",
     "\n",
-    "my_pipeline = Pipeline(steps=[('model', LinearRegression(n_estimators=50, random_state=0))\n",
-    "                             ])"
+    "x_train = pd.read_csv(\"x_train.csv\", header=0)\n",
+    "x_test = pd.read_csv(\"x_test.csv\", header=0)\n",
+    "\n",
+    "y_train = pd.read_csv(\"y_train.csv\", header=0)\n",
+    "y_test = pd.read_csv(\"y_test.csv\", header=0)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e62361dd",
+   "metadata": {},
+   "source": [
+    "## Creating and training with regression models ¶\n",
+    "\n",
+    "- Decision Trees\n",
+    "\n",
+    "- Random Forests\n",
+    "\n",
+    "- Linear Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "84e0e260",
+   "execution_count": 44,
+   "id": "44be6847",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average MAE score: 2.0446284903065433\n"
+      "[0.77353212 0.81239152 0.82021745 0.83378051 0.8123496 ]\n",
+      "0.8104542396676632\n"
      ]
     }
    ],
    "source": [
-    "# Multiply by -1 since sklearn calculates *negative* MAE\n",
-    "scores = -1 * cross_val_score(my_pipeline, x_train, y_train,\n",
-    "                              cv=10,\n",
-    "                              scoring='neg_mean_absolute_error')\n",
-    "\n",
-    "print(\"Average MAE score:\", scores.mean())"
+    "# Linear Regression\n",
+    "lm = linear_model.LinearRegression()\n",
+    "cv = cross_val_score(lm,x_train,y_train,cv=5)\n",
+    "print(cv)\n",
+    "print(cv.mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "81052e9d",
+   "execution_count": 46,
+   "id": "eedcb505",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.89437976 0.86730021 0.88333376 0.89929528 0.88145511]\n",
+      "0.8851528224621834\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Decision Tree Regressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "dt = DecisionTreeRegressor(max_depth=5)\n",
+    "cv = cross_val_score(dt,x_train,y_train,cv=5)\n",
+    "print(cv)\n",
+    "print(cv.mean())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4462b514",
+   "execution_count": 49,
+   "id": "55c6aa39",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.24553878 0.16638795 0.22588448 0.12750496 0.18453894]\n",
+      "0.1899710214514779\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Support Vector Regressor\n",
+    "from sklearn.svm import SVR\n",
+    "\n",
+    "regr = SVR()\n",
+    "cv = cross_val_score(regr,x_train,y_train,cv=5)\n",
+    "print(cv)\n",
+    "print(cv.mean())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3ef8cf4a",
+   "execution_count": 52,
+   "id": "9ec67b61",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'GradientBoostingRegressor' from 'sklearn' (/home/mcc/anaconda3/lib/python3.9/site-packages/sklearn/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[52], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# CatBoost Regressor\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m \u001b[39mimport\u001b[39;00m GradientBoostingRegressor\n\u001b[1;32m      4\u001b[0m model \u001b[39m=\u001b[39m GradientBoostingRegressor()\n\u001b[1;32m      5\u001b[0m cv \u001b[39m=\u001b[39m cross_val_score(regr,x_train,y_train,cv\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m)\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'GradientBoostingRegressor' from 'sklearn' (/home/mcc/anaconda3/lib/python3.9/site-packages/sklearn/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "# CatBoost Regressor\n",
+    "from sklearn import GradientBoostingRegressor\n",
+    "\n",
+    "model = GradientBoostingRegressor()\n",
+    "cv = cross_val_score(regr,x_train,y_train,cv=5)\n",
+    "print(cv)\n",
+    "print(cv.mean())"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e62361dd",
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6ae95f5e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Gradient Boosting Regression\n",
+    "Syntax\n",
+    "\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "Elastic Net Regression\n",
+    "Syntax\n",
+    "\n",
+    "from sklearn.linear_model import ElasticNet\n",
+    "Stochastic Gradient Descent Regression\n",
+    "Syntax\n",
+    "\n",
+    "from sklearn.linear_model import SGDRegressor\n",
+    "Support Vector Machine\n",
+    "Syntax\n",
+    "\n",
+    "from sklearn.svm import SVR\n",
+    "Bayesian Ridge Regression\n",
+    "Syntax\n",
+    "\n",
+    "from sklearn.linear_model import BayesianRidge\n",
+    "CatBoost Regressor\n",
+    "Syntax\n",
+    "\n",
+    "from catboost import CatBoostRegressor\n",
+    "Kernel Ridge Regression\n",
+    "Syntax\n",
+    "\n",
+    "from sklearn.kernel_ridge import KernelRidge\n",
+    "Linear Regression\n",
+    "Syntax\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "XGBoost Regressor\n",
+    "Syntax\n",
+    "\n",
+    "from xgboost.sklearn import XGBRegressor\n",
+    "LGBM Regressor\n",
+    "Syntax\n",
+    "\n",
+    "from lightgbm import LGBMRegressor"
+   ]
   }
  ],
  "metadata": {
@@ -380,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": 1,
