table of features for main

--- a/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling_MAIN.ipynb
+++ b/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling_MAIN.ipynb
@@ -115,12 +115,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "1c2b6b22",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "| **Response Variable** |      **Description** |\n",
+    "|:----------------------|:---------------------|\n",
+    "|    **LifeExpectancy** | Life Expectancy (Yr) |\n",
+    "\n",
+    "**<p style=\"color:green;\">Green indicates feature used in final model</p>**\n",
+    "**<p style=\"color:blue;\">Blue indicates feature of questionable importance</p>**\n",
+    "**<p style=\"color:orange;\">Orange indicates dropped due to high collinearity</p>**\n",
+    "**<p style=\"color:red;\">Red indicates dropped due to missing values greater than 15%</p>**\n",
+    "\n",
+    "| **List Of Features** | **Description** |\n",
+    "|:---------------------|:----------------|\n",
+    "| **<p style=\"color:green;\">Income</p>** | Income composition of resources, Human Development Index |\n",
+    "| **<p style=\"color:green;\">Education</p>** | Years of Education |\n",
+    "| **<p style=\"color:green;\">HIV</p>** | HIV/AIDS: Deaths per 1,000 |\n",
+    "| **<p style=\"color:green;\">DTP</p>** | Diphtheria, tetanus toxoid & pertussis % immunization coverage among 1-year-olds |\n",
+    "| **<p style=\"color:green;\">Polio</p>** | Pol3: % immunization coverage among 1-year-olds |\n",
+    "| **<p style=\"color:green;\">AdultMort</p>** | Adult Mortality Rates of both sexes (probability of dying between 15 and 60 years per 1000 population) |\n",
+    "| **<p style=\"color:blue;\">Year</p>** |  Year   |\n",
+    "| **<p style=\"color:blue;\">Country</p>** |   Country |\n",
+    "| **<p style=\"color:blue;\">Status</p>** |  Developed(1) or Developing(0) |\n",
+    "| **<p style=\"color:blue;\">BMI</p>** |   Average Body Mass Index of entire population |\n",
+    "| **<p style=\"color:blue;\">lt5yD</p>** |  Number of under-five deaths per 1,000 population |\n",
+    "| **<p style=\"color:blue;\">Thin1_19y</p>** |  % Prevalence of thinness among children and adolescents 10 < Age < 19 |\n",
+    "| **<p style=\"color:blue;\">TotalExpen</p>** |    Total Expenditure |\n",
+    "| **<p style=\"color:blue;\">PercExpen</p>** |   Percent Expenditure |\n",
+    "| **<p style=\"color:blue;\">EtOH</p>** |  Alcohol consumption, litres of pure alcohol per capita  |\n",
+    "| **<p style=\"color:blue;\">Measles</p>** |   Number of reported cases per 1,000 population |\n",
+    "| **<p style=\"color:orange;\">Thin5_9y</p>** |  % Prevalence of thinness among children and adolescents 5 < Age < 9 |\n",
+    "| **<p style=\"color:orange;\">InfD</p>** |   Number of Infant Deaths per 1,000 population |\n",
+    "| **<p style=\"color:red;\">HepB</p>** | Hepatitis B: % immunization coverage among 1-year-olds |\n",
+    "| **<p style=\"color:red;\">Population</p>** | Population of country |\n",
+    "| **<p style=\"color:red;\">GDP</p>** | Gross Domestic Product per capita (in USD) |\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
