--- a/notebooks/7_Life_Expectancy_Modeling.ipynb
+++ b/notebooks/7_Life_Expectancy_Modeling.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "2000ce6d",
    "metadata": {},
    "outputs": [],
@@ -49,14 +49,18 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "# Instantiating a LinearRegression Model\n",
+    "# Loading Regression and Modeling Libaries\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import cross_val_score\n"
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.linear_model import SGDRegressor\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "05207097",
    "metadata": {},
    "outputs": [
@@ -85,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c059d20d",
    "metadata": {},
    "outputs": [
@@ -183,14 +187,13 @@
        "4   0.567       11.8  31.9  96.0   96.0      4      693.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load X-Train \n",
-    "\n",
     "df = pd.read_csv('x_train.csv', header=0)\n",
     "\n",
     "# Obtain predictors from Notebook #5:\n",
@@ -205,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5fe9beda",
    "metadata": {},
    "outputs": [
@@ -267,14 +270,13 @@
        "4            46.4"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load Y-Train\n",
-    "\n",
     "y_train = pd.read_csv(\"y_train.csv\", header=0)\n",
     "\n",
     "y_train.head()"
@@ -282,13 +284,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "ed94eae8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load training and testing datasets\n",
-    "\n",
     "x_train = pd.read_csv(\"x_train.csv\", header=0)\n",
     "x_test = pd.read_csv(\"x_test.csv\", header=0)\n",
     "\n",
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "44be6847",
    "metadata": {},
    "outputs": [
@@ -328,7 +329,7 @@
    ],
    "source": [
     "# Linear Regression\n",
-    "lm = linear_model.LinearRegression()\n",
+    "lm = LinearRegression()\n",
     "cv = cross_val_score(lm,x_train,y_train,cv=5)\n",
     "print(cv)\n",
     "print(cv.mean())"
@@ -351,8 +352,6 @@
    ],
    "source": [
     "# Decision Tree Regressor\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "\n",
     "dt = DecisionTreeRegressor(max_depth=5)\n",
     "cv = cross_val_score(dt,x_train,y_train,cv=5)\n",
     "print(cv)\n",
@@ -376,7 +375,6 @@
    ],
    "source": [
     "# Support Vector Regressor\n",
-    "from sklearn.svm import SVR\n",
     "\n",
     "regr = SVR()\n",
     "cv = cross_val_score(regr,x_train,y_train,cv=5)\n",
@@ -386,78 +384,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "9ec67b61",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'GradientBoostingRegressor' from 'sklearn' (/home/mcc/anaconda3/lib/python3.9/site-packages/sklearn/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[52], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# CatBoost Regressor\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m \u001b[39mimport\u001b[39;00m GradientBoostingRegressor\n\u001b[1;32m      4\u001b[0m model \u001b[39m=\u001b[39m GradientBoostingRegressor()\n\u001b[1;32m      5\u001b[0m cv \u001b[39m=\u001b[39m cross_val_score(regr,x_train,y_train,cv\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m)\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'GradientBoostingRegressor' from 'sklearn' (/home/mcc/anaconda3/lib/python3.9/site-packages/sklearn/__init__.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.93777862 0.94625967 0.94826961 0.95304168 0.94819837]\n",
+      "0.9467095920842518\n"
      ]
     }
    ],
    "source": [
     "# CatBoost Regressor\n",
-    "from sklearn import GradientBoostingRegressor\n",
     "\n",
-    "model = GradientBoostingRegressor()\n",
-    "cv = cross_val_score(regr,x_train,y_train,cv=5)\n",
+    "model = GradientBoostingRegressor(random_state=100)\n",
+    "cv = cross_val_score(model,x_train,y_train,cv=5)\n",
     "print(cv)\n",
     "print(cv.mean())"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "6ae95f5e",
-   "metadata": {},
-   "source": [
-    "Gradient Boosting Regression\n",
-    "Syntax\n",
-    "\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "Elastic Net Regression\n",
-    "Syntax\n",
-    "\n",
-    "from sklearn.linear_model import ElasticNet\n",
-    "Stochastic Gradient Descent Regression\n",
-    "Syntax\n",
-    "\n",
-    "from sklearn.linear_model import SGDRegressor\n",
-    "Support Vector Machine\n",
-    "Syntax\n",
-    "\n",
-    "from sklearn.svm import SVR\n",
-    "Bayesian Ridge Regression\n",
-    "Syntax\n",
-    "\n",
-    "from sklearn.linear_model import BayesianRidge\n",
-    "CatBoost Regressor\n",
-    "Syntax\n",
-    "\n",
-    "from catboost import CatBoostRegressor\n",
-    "Kernel Ridge Regression\n",
-    "Syntax\n",
-    "\n",
-    "from sklearn.kernel_ridge import KernelRidge\n",
-    "Linear Regression\n",
-    "Syntax\n",
-    "\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "XGBoost Regressor\n",
-    "Syntax\n",
-    "\n",
-    "from xgboost.sklearn import XGBRegressor\n",
-    "LGBM Regressor\n",
-    "Syntax\n",
-    "\n",
-    "from lightgbm import LGBMRegressor"
    ]
   }
  ],
