Updated Intro and Readme

--- a/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling_MAIN.ipynb
+++ b/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling_MAIN.ipynb
@@ -37,9 +37,11 @@
     "\n",
     "**Problem Statement**\n",
     "\n",
-    "This report investigates modifiable environmental factors that may contribute to life expectancy in the hopes of finding a mathematical model. The primary questions we answer are:\n",
+    "This report investigates modifiable environmental factors that may contribute to life expectancy in the hopes of finding a mathematical model. The primary questions we answer are: The primary questions we answer are:\n",
     "\n",
     "1. *Which variables are significant and important in modeling and predicting Life Expectancy?*\n",
+    "\n",
+    "\n",
     "2. *What steps should be taken given limited resources?*\n",
     "\n",
     "Information from the World Health Organization and United Nations was gathered for the years 2000-2015 for 193 countries in three categories: \n",
@@ -50,15 +52,34 @@
     "2. *Country-specific monetary data*: Gross domestic product, Governmental expenditure rates, Average personal income, Developmental status, Population, Education.\n",
     "\n",
     "\n",
-    "3. *Health-related information*: Infant and adult mortality rates, Number of deaths less than 5 yr, Alcohol consumption rates, Child-related malnutrition, including child thinness rates between 1-19 years and 5-9 years, Average body mass index per capita.\n",
+    "3. *Health-related information*: Infant and adult mortality rates, Number of deaths less than 5 yr, Alcohol consumption rates, Child-related malnutrition, Average body mass index per capita.\n",
     "\n",
+    "Six features were deemed most important and used in the final modeling of life expactancy:\n",
     "\n",
-    "This report investigates modifiable environmental factors that may contribute to life expectancy in the hopes of finding a mathematical model. The two primary questions we hope to answer are:\n",
+    "1. Income\n",
+    "2. Education\n",
+    "3. HIV\n",
+    "4. DTP\n",
+    "5. Polio\n",
+    "6. AdultMort\n",
     "\n",
-    "1. *Which variables are significant in modeling and predicting Life Expectancy?*\n",
+    "Four algorythms were tested on the data and the accuracy alone was used as a benchmark:\n",
     "\n",
+    "| Model | Average % Accuracy (cv=5) |\n",
+    "|:------|--------------------------:|\n",
+    "| Gradient Boosting Regressor | 94.7 |\n",
+    "| Decision Tree Regressor     | 88.5 |\n",
+    "| Linear Regression         | 81.0 |\n",
+    "| Support Vector Regressor  | 19.0 |\n",
     "\n",
-    "2. *What steps should be taken given limited resources?*"
+    "Six alternattive algorythms could be tested, if more work is needed. They include:\n",
+    "\n",
+    "1. Ridge Regression\n",
+    "2. Neural Network Regression \n",
+    "3. Lasso Regression \n",
+    "4. KNN Model \n",
+    "5. Gausian Regression\n",
+    "6. Polynomial Regression\n"
    ]
   },
   {
@@ -69,7 +90,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "In 2006, The World Health Organization published a report entitled `Preventing disease through healthy environments`. \n",
+    "In 2006, The World Health Organization published a report entitled *Preventing disease through healthy environments*. \n",
     ">[It] “confirms that approximately one-quarter of the global disease burden, and more than one-third of the burden among children, is due to modifiable environmental factors.”\n",
     ">\n",
     ">[WHO-Preventing Disease Through Healthy Environments](https://www.who.int/publications/i/item/9241593822)\n",
@@ -173,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "toc": {
    "base_numbering": 1,
