--- a/notebooks/7_Life_Expectancy_Modeling.ipynb
+++ b/notebooks/7_Life_Expectancy_Modeling.ipynb
@@ -303,13 +303,14 @@
    "id": "e62361dd",
    "metadata": {},
    "source": [
-    "## Creating and training with regression models ¶\n",
+    "## Four algorythms were tested accuracy alone was used as a benchmark:\n",
     "\n",
-    "- Decision Trees\n",
-    "\n",
-    "- Random Forests\n",
-    "\n",
-    "- Linear Regression"
+    "| Model | Average % Accuracy (cv=5) |\n",
+    "|:------|--------------------------:|\n",
+    "| Gradient Boosting Regressor | 94.7 |\n",
+    "| Decision Tree Regressor     | 88.5 |\n",
+    "| Linear Regression         | 81.0 |\n",
+    "| Support Vector Regressor  | 19.0 |"
    ]
   },
   {
@@ -329,6 +330,7 @@
    ],
    "source": [
     "# Linear Regression\n",
+    "\n",
     "lm = LinearRegression()\n",
     "cv = cross_val_score(lm,x_train,y_train,cv=5)\n",
     "print(cv)\n",
@@ -352,6 +354,7 @@
    ],
    "source": [
     "# Decision Tree Regressor\n",
+    "\n",
     "dt = DecisionTreeRegressor(max_depth=5)\n",
     "cv = cross_val_score(dt,x_train,y_train,cv=5)\n",
     "print(cv)\n",
@@ -423,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
   },
   "toc": {
    "base_numbering": 1,
