Update .ipynb headers

--- a/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling_MAIN.ipynb
+++ b/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling_MAIN.ipynb
@@ -12,17 +12,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f29391f8",
    "metadata": {},
    "source": [
     "# 1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling\n",
     "\n",
-    "To:&nbsp;&nbsp;&nbsp;&nbsp; Magnimind\n",
+    "To:&nbsp;&nbsp;&nbsp;&nbsp; [Magnimind](https://magnimindacademy.com/)\n",
     "\n",
     "From: Matt Curcio, matt.curcio.ri@gmail.com\n",
     "\n",
-    "Date: 2023-01-24\n",
+    "Date: 2023-01-29\n",
     "\n",
     "Re:&nbsp;&nbsp;&nbsp; NOTEBOOK #1\n"
    ]
