--- a/notebooks/2_Life_Expectancy_Initial_Data_Analysis.ipynb
+++ b/notebooks/2_Life_Expectancy_Initial_Data_Analysis.ipynb
@@ -21,11 +21,11 @@
     "\n",
     "## Initial_Data_Analysis\n",
     "\n",
-    "To:&nbsp;&nbsp;&nbsp;&nbsp; Magnimind\n",
+    "To:&nbsp;&nbsp;&nbsp;&nbsp; [Magnimind](https://magnimindacademy.com/)\n",
     "\n",
     "From: Matt Curcio, matt.curcio.ri@gmail.com\n",
     "\n",
-    "Date: 2023-01-24\n",
+    "Date: 2023-01-29\n",
     "\n",
     "Re:&nbsp;&nbsp;&nbsp; NOTEBOOK #2\n",
     "\n",
