--- a/notebooks/5_Life_Expectancy_Feature_Engineering.ipynb
+++ b/notebooks/5_Life_Expectancy_Feature_Engineering.ipynb
@@ -12,6 +12,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0d6eaa04",
    "metadata": {},
@@ -20,13 +21,13 @@
     "\n",
     "## Feature_Engineering\n",
     "\n",
-    "To:&nbsp;&nbsp;&nbsp;&nbsp; Magnimind\n",
+    "To:&nbsp;&nbsp;&nbsp;&nbsp; [Magnimind](https://magnimindacademy.com/)\n",
     "\n",
     "From: Matt Curcio, matt.curcio.ri@gmail.com\n",
     "\n",
-    "Date: 2023-01-24\n",
+    "Date: 2023-01-29\n",
     "\n",
-    "Re:&nbsp;&nbsp;&nbsp; NOTEBOOK #4\n",
+    "Re:&nbsp;&nbsp;&nbsp; NOTEBOOK #5\n",
     "\n",
     "---\n",
     "\n",
