--- a/notebooks/6_Life_Expectancy_Recursive_Feature_Elimination.ipynb
+++ b/notebooks/6_Life_Expectancy_Recursive_Feature_Elimination.ipynb
@@ -12,6 +12,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e8f969db",
    "metadata": {},
@@ -20,13 +21,13 @@
     "\n",
     "## Recursive_Feature_Elimination\n",
     "\n",
-    "To:&nbsp;&nbsp;&nbsp;&nbsp; Magnimind\n",
+    "To:&nbsp;&nbsp;&nbsp;&nbsp; [Magnimind](https://magnimindacademy.com/)\n",
     "\n",
     "From: Matt Curcio, matt.curcio.ri@gmail.com\n",
     "\n",
-    "Date: 2023-01-24\n",
+    "Date: 2023-01-29\n",
     "\n",
-    "Re:&nbsp;&nbsp;&nbsp; NOTEBOOK #5\n",
+    "Re:&nbsp;&nbsp;&nbsp; NOTEBOOK #6\n",
     "\n",
     "---\n",
     "\n",
