--- a/notebooks/7_Life_Expectancy_Modeling.ipynb
+++ b/notebooks/7_Life_Expectancy_Modeling.ipynb
@@ -12,6 +12,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b3e8eadd",
    "metadata": {},
@@ -20,11 +21,11 @@
     "\n",
     "## Modeling\n",
     "\n",
-    "To:&nbsp;&nbsp;&nbsp;&nbsp; Magnimind\n",
+    "To:&nbsp;&nbsp;&nbsp;&nbsp; [Magnimind](https://magnimindacademy.com/)\n",
     "\n",
     "From: Matt Curcio, matt.curcio.ri@gmail.com\n",
     "\n",
-    "Date: 2023-01-24\n",
+    "Date: 2023-01-29\n",
     "\n",
     "Re:&nbsp;&nbsp;&nbsp; NOTEBOOK #6\n",
     "\n",
