testing linear coeff

--- a/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling_MAIN.ipynb
+++ b/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling_MAIN.ipynb
@@ -73,7 +73,9 @@
     "| Linear Regression         | 81.0 |\n",
     "| Support Vector Regressor  | 19.0 |\n",
     "\n",
-    "Six alternattive algorythms could be tested, if more work is needed. They include:\n",
+    "Alternattively, there are many algorthms that can be tested:\n",
+    "\n",
+    "\n",
     "\n",
     "1. Ridge Regression\n",
     "2. Neural Network Regression \n",
